Use delete[] for arrays, not delete.  Bug 201367, patch by mstankus@calpoly.edu (Mark Stankus), r=bbaetz, sr=sspitzer